--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@emotion/react": "^11.13.3",
+    "@supabase/supabase-js": "^2.49.1",
     "react-router-dom": "^6.26.2",
     "lucide-react": "0.522.0"
   },
